--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
-              }
+              },
+               "src/favicon.ico",
+              "src/assets"
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
             "scripts": []
